# pose_estimation

./: .gitignore  README.md  classification_test.ipynb  main.py  mediapipe_sample.py  pyproject.toml  random_forest.ipynb  sample.py  yolov8.py
mst_data/: mst_game.csv
pose_estimation/: sample.py
test_notebook/: dartslive_cut.ipynb  mediapipe_test.ipynb
tmp/: detect_by_mp.py  get_throw.py  parse_landmarks.py
